--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adityaguptaresumemakerwithfirebase",
+  "name": "resumemakerwithfirebase",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.4.5",
     "firebase": "^10.3.0",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
